tests/FSharp.Analyzers.Tests/data/partialapp/negative/No warning for right piped3 args.fs
module M

let myFunc a b c d = a + b + c + d

(20, 30, 40) |||> myFunc 10
